--- a/src/pages/Signin/Signin.css
+++ b/src/pages/Signin/Signin.css
@@ -1,10 +1,12 @@
 .formContainer {
-    background-color: var(--bgcolor);
-    /* width: 98vw;
-    height: 100vh; */
+    background-image: url(assets/bgimage.jpg);
+    background-size: cover;
+    background-repeat: no-repeat; 
+    background-position: center center; 
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 2rem;
 }
 
@@ -14,7 +16,7 @@ form {
     justify-content: center;
     gap: 1rem;
     width: 85vw;
-    margin: 2rem 2rem;
+    margin: 2rem;
 }
 
 label {
@@ -48,11 +50,12 @@ input:focus {
 .sendButton {
     font-size: 2rem;
     font-family: var(--secondaryfont);
-    background-color: var(--detailscolor);
-    color: var(--titlecolor);
+    background-color: var(--disabled);
+    color: var(--principalcolor);
 }
 .sendButton:disabled {
-    background-color: var(--disabled);
+    background-color: var(--detailscolor);
+    color: var(--titlecolor);
 }
 
 .message {
