--- a/src/pages/Inicio/Inicio.css
+++ b/src/pages/Inicio/Inicio.css
@@ -23,10 +23,10 @@
 h4 {
     color: var(--detailscolor);
     text-shadow: 
-    -1px -1px 0px rgb(168, 48, 24), 
-    1px -1px 0px rgb(168, 48, 24), 
-    -1px  1px 0px rgb(168, 48, 24),
-    1px  1px 0px rgb(168, 48, 24);
+    -1px -1px 0px #d09d9c, 
+    1px -1px 0px #d09d9c, 
+    -1px  1px 0px #d09d9c,
+    1px  1px 0px #d09d9c;
     font-family: var(--secondaryfont);
     font-size: 1.8rem;
     text-align: start;
