--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,6 @@ body {
   background-size: cover;
   background-repeat: no-repeat; 
   background-position: center center; 
-  width: 100vw;
-  height: auto;
-  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -21,7 +18,7 @@ body {
 
 /* From Uiverse.io by kleenpulse */ 
 button {
-  --border-color: linear-gradient(-45deg, #ffae00, #7e03aa, rgb(140, 91, 83));
+  --border-color: linear-gradient(-45deg, #ffae00, #7e03aa, #8c5b53);
   --border-width: 0.125em;
   --curve-size: 0.5em;
   --blur: 30px;
