--- a/src/pages/Inicio/Inicio.css
+++ b/src/pages/Inicio/Inicio.css
@@ -73,7 +73,9 @@ li {
 
 .userInfo {
     display: flex;
+    justify-content: center;
     align-items: center;
+    gap: 1rem;
     margin-bottom: 1rem;
     color: var(--principalcolor);
     font-family: var(--secondaryfont);
@@ -84,4 +86,16 @@ li {
     height: auto;
     border-radius: 50%;
     margin-right: 1rem;
+}
+
+.buttons {
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin: 1.5rem 0;
+    width: 70%;
+    height: auto;
+    font-size: 1.3rem;
 }
