--- a/src/pages/UserProfile/UserProfile.css
+++ b/src/pages/UserProfile/UserProfile.css
@@ -8,7 +8,7 @@ h2 {
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    margin: 1.5rem 1rem;
+    margin: 0 1rem;
 }
 
 .profileImg {
@@ -20,4 +20,10 @@ h2 {
     align-items: center;
     justify-content: center;
     width: 70%;
+    margin: 0;
+}
+
+.profileDescription button {
+    width: 25%;
+    margin-bottom: 1rem;
 }
