agregado de recipeDetail

--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,4 +1,4 @@
-.recipesContainer, .recipeCard {
+.recipeContainer, .recipeCard {
     background-image: url(assets/bgimage.jpg);
     background-size: cover;
     background-repeat: no-repeat; 
