--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 8rem;
     width: 97vw;
     height: 18vh;
     background-color: var(--titlecolor);
@@ -18,6 +18,7 @@ h1 {
     1px -1px 0px #d09d9c, 
     -1px  1px 0px #d09d9c,
     1px  1px 0px #d09d9c;
+    margin-left: -6rem;
 }
 
 .links, h1 {
@@ -25,7 +26,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: .5rem;
     font-family: var(--principalfont);
     font-size: 2rem;
     width: 50%;
